--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -53,3 +53,9 @@ li a:hover{
     text-align: center;
     align-self: center;
 }
+
+header{
+    height: 50%;
+    width: 100%;
+    background-image: url("Imagenes/Portada.jpg");
+}
