--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -9,8 +9,8 @@ header {
     width: 100%;
     margin-left: -8px;
     margin-top: -8px;
-    background-image: url("Imagenes/Portada.jpg");
-    background-size: 100% 100%;
+    background-image: url("Imagenes/turismo.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -21,7 +21,7 @@ header {
     text-align: center;
     place-content: center;
     position: static;
-    align-items: baseline;
+    align-items: center;
 }
 
 ul {
