--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -1,10 +1,12 @@
 *{
-    font-family:cursive;
+    font-family:fantasy;
 }
 
 .container-header{
     height: 60px;
     width: 100%;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 header {
@@ -29,6 +31,9 @@ header {
     align-items: center;
 }
 
+.Logo img {
+    height: inherit;
+}
 ul {
     list-style-type: none;
     margin: 0px;
@@ -51,8 +56,8 @@ border-radius: 20px;
 }
 
 li a:hover{
-    background-color: coral;
-    color: white;
+    background-color:azure;
+    color:slategrey;
 }
 
 .menu{
