--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -121,3 +121,12 @@ li a:hover{
     position: absolute;
     top: 0;
 }
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    display: inline-block;
+}
