--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -126,7 +126,31 @@ li a:hover{
     cursor: pointer;
     height: 15px;
     width: 15px;
+    border-radius: 50%;
     margin: 0 2px;
     background-color: #bbb;
     display: inline-block;
+    transition: background-color #bbb 0.6s ease;
+
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4;}
+    to {opacity: 1;}
+}
+
+@keyframes fade {
+    from {opacity: .4;}
+    to {opacity: 1;}
 }
