--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -155,3 +155,16 @@ li a:hover{
     from {opacity: .4;}
     to {opacity: 1;}
 }
+
+.grid-container {
+margin-top: 2%;
+display: grid;
+grid-template-columns: auto auto auto;
+padding: 10px;
+}
+
+.grid-item {
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+}
