--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -167,4 +167,12 @@ padding: 10px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
+    height: 250px;
+    width: 90%;
 }
+
+.grid-item img {
+    height: inherit;
+    width: inherit;
+}
+
