--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -1,9 +1,19 @@
 *{
     font-family:fantasy;
+    overflow: hidden;
 }
 
+body {
+    height: 100vh;
+    overflow: auto;
+    background-image: url("Imagenes/turismo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
 .container {
-height: 100%;
+height: 60%;
 width: 100%;
 display: flex;
 }
@@ -22,9 +32,6 @@ header {
     width: 100%;
     margin-left: -8px;
     margin-top: -8px;
-    background-image: url("Imagenes/turismo.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .Logo {
@@ -76,7 +83,8 @@ li a:hover{
     max-width: 1000px;
     position: relative;
     margin: auto;
-    margin-top: 26%;
+    margin-top: 2%;
+    width: 40%;
 }
 
 .mySlide {
@@ -176,3 +184,6 @@ padding: 10px;
     width: inherit;
 }
 
+.container-body {
+width: 100%;
+}
