--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -1,3 +1,8 @@
+:root {
+    --backgroundcolor: #fff;
+
+}
+
 *{
     font-family:fantasy;
     overflow: hidden;
@@ -164,10 +169,10 @@ li a:hover{
 }
 
 .grid-container {
-margin-top: 2%;
 display: grid;
 grid-template-columns: auto auto auto;
 padding: 10px;
+background-color: var(--backgroundcolor);
 }
 
 .grid-item {
@@ -185,4 +190,5 @@ padding: 10px;
 
 .container-body {
 width: 100%;
+background-color: var(--backgroundcolor);
 }
