--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -49,8 +49,8 @@ header {
     align-items: center;
 }
 
-.Logo img {
-    height: inherit;
+.Logo a img {
+    height: 100px;
 }
 ul {
     list-style-type: none;
@@ -191,4 +191,41 @@ background-color: var(--backgroundcolor);
 .container-body {
 width: 100%;
 background-color: var(--backgroundcolor);
+}
+
+.container-info {
+background-color: white;
+width: 90%;
+text-align: center;
+margin-left: 70px;
+height: 400px;
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+
+.container-info-img {
+display: flex;
+flex-direction: row;
+width: 80%;
+justify-content: center;
+align-items: center;
+height: 350px;
+background-color: rgb(192, 190, 190);
+}
+
+.container-info-img img {
+height: 100%;
+width: 1000px;
+}
+
+.Titulo-temporal {
+    margin: 200px 0 200px 0;
+
+}
+
+.container-text {
+    text-align: center;
+    
 }
