--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -20,7 +20,7 @@
     height: 100vh;
     overflow: auto;
     margin: auto;
-    background-color:rgb(87, 201, 230);
+   background-color: rgb(247, 235, 235);
 }
 
 
@@ -407,23 +407,69 @@ width: 900px;
     color: red;
 }
 
-.form-supplier {
-    width: 100%;
+* {
+    box-sizing: border-box;
+}
+.body-contact {
+    margin: 0;
+    font-family: sans-serif;
+}
+
+.formulario {
+    width: 500px;
+    max-width: 100%;
+    margin: auto;
+    margin-top: 30px;
+    padding: 20px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.3);
+    position: relative;
+}
+
+.formulario__titulo {
     text-align: center;
+    margin-top: 0;
+    color: rgba(0, 0, 0, 0.7);
 }
 
-select, input[type=text]{
-    width: 200px;
-    border-radius: 6px;
-
+.formulario__input, .formulario__label, .formulario__submit {
+    display: block;
+    width: 100%;
+    font-size: 1.3em;
+   
 }
 
-select:hover, select:focus, input[type=text]:hover, input[type=text]:focus {
-    border-color:rgb(14, 150, 150);
-    text-shadow:0 0 10px rgb(14, 150, 150);
-    outline: none;
+.formulario__input {
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 40px;
 }
 
-label {
-    text-shadow:0 0 10px rgb(14, 150, 150);
+
+.formulario__input:focus {
+    outline: 1px solid rgba(0, 0, 0, 0.7);
+}
+
+.formulario__input:focus + .formulario__label {
+    margin-top: -135px;
+}
+.formulario__label {
+    padding-left: 15px;
+    position: absolute;
+    margin-top: -85px;
+    z-index: -20;
+    color: rgba(0, 0, 0, 0.5);
+    transition: all 0.2s;
+}
+
+.fijar {
+    margin-top: -135px;
+}
+
+.formulario__submit {
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
 }
